resolve fdo#60450 - Printer list is missing its border in Print dialog

Change-Id: I2e28b9f9d52bcb01b04f98d39d12b6d8a627bec5